# crazy_tiger

./: .travis.yml  README.md  setup.cfg  tests.py
src/crazy_tiger/: __init__.py  generator.py  words.py
