[metadata]
name = crazy_tiger
version = 0.1.0
author = Jannis Vamvas
author_email = jannis.vamvas@gmail.com
description = Generate harmless random nicknames
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jvamvas/crazy_tiger
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
